# images/gpu-control-plane-artifact/pkg/controller/moduleconfig/state.go
@@ -43,6 +43,7 @@ type Settings struct {
 	Scheduling     SchedulingSettings
 	Placement      PlacementSettings
 	Monitoring     MonitoringSettings
+	LogLevel       string
 }
 
 type ManagedNodesSettings struct {
